# whisperX-AMD-ROCM7.1

./: README.md  pyproject.toml  test_inference.py  test_real_audio.py
.github/workflows/: tests.yml
whisperx/: __main__.py  alignment.py  transcribe.py  utils.py
